# learn_clang

./: .bazelrc  MODULE.bazel
clang_tool/: BUILD.bazel  ast_importer_main.cpp  ast_importer_main2.cpp  main.cpp
moc/: BUILD.bazel  common.cpp  common.h  generator.h  moc_ast_consumer.cpp  moc_ast_consumer.h  moc_ng.cpp  moc_ng.h  moc_pp_callbacks.cpp  moc_pp_callbacks.h  property_parser.h  qobjs.cpp  qobjs.h
tests/: BUILD.bazel  test_macro.cpp
